Fixed alignment

--- a/components/ScrollIndicator/styles.module.css
+++ b/components/ScrollIndicator/styles.module.css
@@ -2,7 +2,6 @@
 	width: 60px;
 	height: 72px;
 	left: 50%;
-	margin-left: -30px;
 	bottom: 20px;
     transform: scale(0.5);
 	cursor: pointer;
